--- a/Projets.html
+++ b/Projets.html
@@ -58,7 +58,7 @@
             <div class="clear"></div>
             <!-- Nouvelle expérience-->
             <div class="gauche col1 colorBlueDark">
-                <h2 class="size40">Développeur autodidacte</h2>
+                <h2 class="size40">Flatcraft</h2>
                 <img class="image_projet" src="images/flatcraft.png" alt="logo du site"/>
             </div>
             <div class="gauche col2 colorBlueDark">
